Several fixes & polish
 - Fixed header field text colour in edit mode
 - Fixed edit mode toggle frequently swallowing click events
 - Moved added header buttons to before kebab menu
 - Switched kebab menu to spawn a context menu instead of built-in behaviour
 - Fixed container sheet first render not showing a tab
 - Fixed item control colours in dark mode
 - Fixed vertical centring on filder controls
 - Fixed quantity field text colour
 - Fixed quantity field missing increment and decrement controls
 - Fixed .window-content spacing regression
 - Made the starting equipment cog control smaller
 - Removed breakpoints from container sheet encumbrance metre
 - Fixed encumbrance metre label colour in light mode
 - Renamed .interface-only to .always-interactive
 - Added .always-interactive class to currency and quantity on container sheet
 - Fixed level badge colour
 - Fixed effects tab missing from several item types
 - Fixed remove craft button not responding

--- a/less/v2/apps.less
+++ b/less/v2/apps.less
@@ -235,6 +235,8 @@
     list-style: none;
     padding: 0;
     margin: 0;
+
+    li { margin: 0; }
   }
 
   h1, h2, h3 {
@@ -934,7 +936,7 @@
 /* ---------------------------------- */
 
 .dnd5e2.sheet {
-  .locked a:not(.interface-only) {
+  .locked a:not(.always-interactive) {
     cursor: default;
     &:hover { text-shadow: unset; }
   }
@@ -1066,7 +1068,7 @@
     }
     > section:empty { display: none; }
   }
-  &:not(.minimized).window-content, .window-content > .column-container {
+  &:not(.minimized) .window-content, .window-content > .column-container {
     display: flex;
     flex-direction: column;
     gap: 8px;
